[gd_scene load_steps=10 format=3 uid="uid://dix3cxbn03nyf"]

[ext_resource type="Script" uid="uid://cjk0s03er3un1" path="res://scenes/gameplay/bsshop.gd" id="1_780sy"]
[ext_resource type="Texture2D" uid="uid://c81ul71abe1y5" path="res://assets/art/icons/bs_tier1_perk1.png" id="1_d4u1q"]
[ext_resource type="Texture2D" uid="uid://d0jen1c7l3byo" path="res://assets/art/icons/bs_tier1_perk1black.png" id="2_780sy"]
[ext_resource type="Texture2D" uid="uid://b15i1mb8wnjk6" path="res://assets/art/icons/bs_tier2_perk1.png" id="3_1752s"]
[ext_resource type="Texture2D" uid="uid://molw7hb6hdxo" path="res://assets/art/icons/bs_tier2_perk1black.png" id="4_xv8mx"]
[ext_resource type="Texture2D" uid="uid://dyg8kc0axccmv" path="res://assets/art/icons/bs_tier2_perk2.png" id="5_1ja5n"]
[ext_resource type="Texture2D" uid="uid://ehqpl7lokv7x" path="res://assets/art/icons/bs_tier2_perk2black.png" id="6_kgo7f"]
[ext_resource type="Texture2D" uid="uid://b4cm4tqc55u51" path="res://assets/art/icons/bs_tier3_perk1.png" id="7_lxeww"]
[ext_resource type="Texture2D" uid="uid://bt3tol84kvoas" path="res://assets/art/icons/bs_tier3_perk1black.png" id="8_08q51"]

[node name="bsshop" type="BoxContainer"]
anchors_preset = -1
anchor_right = 0.524
anchor_bottom = 0.878
offset_right = 0.351929
offset_bottom = 0.0559692
grow_horizontal = 2
grow_vertical = 2
vertical = true
script = ExtResource("1_780sy")

[node name="tiers" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 57

[node name="t1panel" type="PanelContainer" parent="tiers"]
layout_mode = 2
size_flags_horizontal = 0

[node name="t1" type="VBoxContainer" parent="tiers/t1panel"]
layout_mode = 2
alignment = 1

[node name="p1" type="TextureButton" parent="tiers/t1panel/t1"]
layout_mode = 2
texture_normal = ExtResource("1_d4u1q")
texture_disabled = ExtResource("2_780sy")

[node name="p1label" type="Label" parent="tiers/t1panel/t1"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Learn from your
predecessor's mistakes.
(+100% to all income per
total Bloodline Strength)
(Costs 1 Bloodline Strength)"

[node name="t2panel" type="PanelContainer" parent="tiers"]
layout_mode = 2

[node name="t2" type="VBoxContainer" parent="tiers/t2panel"]
layout_mode = 2
alignment = 1

[node name="p2" type="TextureButton" parent="tiers/t2panel/t2"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_1752s")
texture_disabled = ExtResource("4_xv8mx")

[node name="p2label" type="Label" parent="tiers/t2panel/t2"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Delegate to your
advisors. (4x Passive
income, which can now
crit if Idle.
(No clicks for 30s))
(Costs 10 Bloodline Strength)"

[node name="p3" type="TextureButton" parent="tiers/t2panel/t2"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_1ja5n")
texture_disabled = ExtResource("6_kgo7f")

[node name="p3label" type="Label" parent="tiers/t2panel/t2"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Take matters into your
own hands. (Starting click
income is now 100. Crit
Mult is now tripled, but
Passive income is halved)
(Costs 10 Bloodline Strength)"

[node name="t3panel" type="PanelContainer" parent="tiers"]
layout_mode = 2

[node name="t3" type="VBoxContainer" parent="tiers/t3panel"]
layout_mode = 2
alignment = 1

[node name="p4" type="TextureButton" parent="tiers/t3panel/t3"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("7_lxeww")
texture_disabled = ExtResource("8_08q51")

[node name="p3label" type="Label" parent="tiers/t3panel/t3"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Raise your levies.
(Unlocks Expansion)
(Costs 100 Bloodline Strength)"

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 592.0
offset_bottom = 185.0
text = "Spend your Bloodline Strength on powerful upgrades. 
You may only choose one perk from each Tier.

These perks are reset on the second prestige layer - Legacy, which will be implemented in the future."

[connection signal="pressed" from="tiers/t1panel/t1/p1" to="." method="_on_p_1_pressed"]
[connection signal="pressed" from="tiers/t2panel/t2/p2" to="." method="_on_p_2_pressed"]
[connection signal="pressed" from="tiers/t2panel/t2/p3" to="." method="_on_p_3_pressed"]
[connection signal="pressed" from="tiers/t3panel/t3/p4" to="." method="_on_p_4_pressed"]
